--- a/pandas/eda_sales_data.ipynb
+++ b/pandas/eda_sales_data.ipynb
@@ -1151,22 +1151,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
-   "id": "bf230458-d8c1-43bc-962b-88a753ddf076",
+   "execution_count": null,
+   "id": "9030636d-ad03-4f10-9b20-dfdee1cc4416",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nunique' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-224-46c29a96875d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Order ID'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mas_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'Product'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m','\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Quantity Ordered'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Product'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnunique\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'nunique' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test=df.groupby(['Order ID'], as_index = False).agg({'Product': ','.join,'Quantity Ordered':sum})"
    ]
@@ -1274,9 +1262,230 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7f3d0d85-66b3-4174-be4e-6c8618889526",
+   "metadata": {},
+   "source": [
+    "## What products sold the most , why it sold the most ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "f6d1ca77-d163-4148-8891-9c54aecf2036",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "      <th>Order Month</th>\n",
+       "      <th>Order Year</th>\n",
+       "      <th>Total Price</th>\n",
+       "      <th>Order month_year</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>City_State</th>\n",
+       "      <th>Order Hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>176558</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-04-19 08:46:00</td>\n",
+       "      <td>917 1st St, Dallas, TX 75001</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>23.90</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>Dallas</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>DallasTX</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>176559</td>\n",
+       "      <td>Bose SoundSport Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>2019-04-07 22:30:00</td>\n",
+       "      <td>682 Chestnut St, Boston, MA 02215</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>99.99</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>Boston</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>BostonMA</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>176560</td>\n",
+       "      <td>Google Phone</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>2019-04-12 14:38:00</td>\n",
+       "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Los AngelesCA</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>176560</td>\n",
+       "      <td>Wired Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>2019-04-12 14:38:00</td>\n",
+       "      <td>669 Spruce St, Los Angeles, CA 90001</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Los AngelesCA</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>176561</td>\n",
+       "      <td>Wired Headphones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>2019-04-30 09:27:00</td>\n",
+       "      <td>333 8th St, Los Angeles, CA 90001</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>11.99</td>\n",
+       "      <td>2019-04</td>\n",
+       "      <td>Los Angeles</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>Los AngelesCA</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order ID                     Product  Quantity Ordered  Price Each  \\\n",
+       "0   176558        USB-C Charging Cable                 2       11.95   \n",
+       "2   176559  Bose SoundSport Headphones                 1       99.99   \n",
+       "3   176560                Google Phone                 1      600.00   \n",
+       "4   176560            Wired Headphones                 1       11.99   \n",
+       "5   176561            Wired Headphones                 1       11.99   \n",
+       "\n",
+       "           Order Date                      Purchase Address  Order Month  \\\n",
+       "0 2019-04-19 08:46:00          917 1st St, Dallas, TX 75001            4   \n",
+       "2 2019-04-07 22:30:00     682 Chestnut St, Boston, MA 02215            4   \n",
+       "3 2019-04-12 14:38:00  669 Spruce St, Los Angeles, CA 90001            4   \n",
+       "4 2019-04-12 14:38:00  669 Spruce St, Los Angeles, CA 90001            4   \n",
+       "5 2019-04-30 09:27:00     333 8th St, Los Angeles, CA 90001            4   \n",
+       "\n",
+       "   Order Year  Total Price Order month_year          City State  \\\n",
+       "0        2019        23.90          2019-04        Dallas    TX   \n",
+       "2        2019        99.99          2019-04        Boston    MA   \n",
+       "3        2019       600.00          2019-04   Los Angeles    CA   \n",
+       "4        2019        11.99          2019-04   Los Angeles    CA   \n",
+       "5        2019        11.99          2019-04   Los Angeles    CA   \n",
+       "\n",
+       "       City_State  Order Hour  \n",
+       "0        DallasTX           9  \n",
+       "2        BostonMA          22  \n",
+       "3   Los AngelesCA          15  \n",
+       "4   Los AngelesCA          15  \n",
+       "5   Los AngelesCA           9  "
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "id": "01a3295f-79d2-4bda-840b-efe3d612b77d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Product\n",
+       "AAA Batteries (4-pack)        31017\n",
+       "AA Batteries (4-pack)         27635\n",
+       "USB-C Charging Cable          23975\n",
+       "Lightning Charging Cable      23217\n",
+       "Wired Headphones              20557\n",
+       "Apple Airpods Headphones      15661\n",
+       "Bose SoundSport Headphones    13457\n",
+       "27in FHD Monitor               7550\n",
+       "iPhone                         6849\n",
+       "27in 4K Gaming Monitor         6244\n",
+       "34in Ultrawide Monitor         6199\n",
+       "Google Phone                   5532\n",
+       "Flatscreen TV                  4819\n",
+       "Macbook Pro Laptop             4728\n",
+       "ThinkPad Laptop                4130\n",
+       "20in Monitor                   4129\n",
+       "Vareebadd Phone                2068\n",
+       "LG Washing Machine              666\n",
+       "LG Dryer                        646\n",
+       "Name: Quantity Ordered, dtype: int64"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('Product')['Quantity Ordered'].sum().sort_values(ascending=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44bde4b3-c6fc-44ea-bce2-1b8627788961",
+   "id": "ca87ce1c-e9d3-478a-b9cf-d330045827b4",
    "metadata": {},
    "outputs": [],
    "source": []
